--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@
       <header>
         <h1 class="header"><a href="{{ "/" | relative_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 <!--         <p class="header">{{ site.description | default: site.github.project_tagline }}</p> -->
-        <p class="header">&emsp;&emsp;&emsp;&nbsp; July<br />
+        <p class="header">&emsp;&emsp;&nbsp;&nbsp; July 18<br />
         &ensp; Lisbon, Portugal</p>
         <!--<p>Abstract: <a href="https://time.is/compare/2359_XX_May_2025_in_UTC-12/local">May XX AoE</a><br/>
         Notification: <a href="https://time.is/compare/2359_XX_Jun_2025_in_UTC-12/local">Jun XX AoE</a></p>-->
