speakers, call, registration

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,12 @@
 ---
 
 @import 'jekyll-theme-dinky';
+
+.info-box {
+  border: 1px solid #007bff; /* Blue border */
+  background-color: #e7f3ff; /* Light blue background */
+  color: #0056b3; /* Dark blue text */
+  padding: 15px;
+  margin: 20px 0;
+  border-radius: 5px;
+}
